<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <!--Place for image of a dish-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/default_description"
                android:src="@drawable/spaghetti">

            </ImageView>

            <!--Place for the title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_display_black"
                android:text="@string/default_dish_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp">

            </TextView>

            <!--Place for the subtitle-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_display"
                android:text="@string/default_dish_description"
                android:textAlignment="center"
                android:textColor="@color/cardview_dark_background">

            </TextView>

            <!--There goes line too-->

            <!--Place for text "RECIPE"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/recipe_holder"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <!--Place for actual recipe text-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_display"
                android:text="@string/default_recipe"
                android:textAlignment="center"
                android:textColor="@color/black">

            </TextView>

            <!--Place for text "INGREDIENTS"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/ingredients_holder"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_display"
                android:text="@string/default_ingredients"
                android:textAlignment="center"
                android:textColor="@color/black">

            </TextView>

            <!--Place for kcal-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

            <!--Place for cooking time-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_black"
                    android:text="@string/calories_holder"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="@font/playfair_display_black"
                    android:text="@string/default_calories"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp">

                </TextView>

            </LinearLayout>

            <!--Place for "DIET TYPE"-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/default_diet_type"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <!--Place for vegan/vegetarian option-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_black"
                    android:text="@string/vegan_diet"
                    android:textAlignment="center"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp">

                </TextView>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:contentDescription="@string/default_description"
                    android:src="@drawable/veg_leaf">

                </ImageView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/time_cooking_holder"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_display_black"
                android:text="@string/time_cooking_default"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp">

            </TextView>

            <!--Only tags to finish-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/tags_default"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>

            <!--Finish-->
            <ImageButton
                android:id="@+id/confirm_choice_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/confirm1000"
                android:contentDescription="@string/default_description">

            </ImageButton>

            <Button
                android:id="@+id/next_dish_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/next_dish">

            </Button>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>