<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="DishDisplay.NoDishesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_dishes_info"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="50sp"
            android:gravity="center">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_dishes_sign"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="80sp"
            android:gravity="center">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_dishes_title"
            android:layout_margin="20dp"
            android:textColor="@color/materialcolorpicker__grey"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/no_dishes_subtitle"
            android:textColor="@color/materialcolorpicker__grey"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center">

        </TextView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>