<?xml version="1.0" encoding="utf-8"?>

<!--This is the row in main menu-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="start"
    android:background="@drawable/row_background"
    android:layout_margin="15dp">

    <!--Actual content of the row-->
    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:contentDescription="@string/default_description">
    </ImageView>

    <!--Here go two lines of title and subtitle-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <!--Title-->
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add_new_dish"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <!--Subtitle-->
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/create_dish_subtitle">
        </TextView>

    </LinearLayout>

</LinearLayout>