<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/coordinator_start"
    android:layout_height="match_parent"
    tools:context=".Start.StartActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.EverydayCook.AppBarOverlay"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="402dp"
            android:layout_height="134dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/new_dish_button"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/add_new_dish"
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/show_todays_dish_button"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/show_active_dish"
                app:backgroundTint="@color/design_default_color_on_secondary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="221dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/default_description"
                app:srcCompat="@drawable/logo1000" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:fontFamily="@font/lobster"
                android:text="@string/display_app_name"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                android:paddingTop="20sp"
                android:text="@string/welocme_app_text"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="142dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/default_description"
                    app:srcCompat="@drawable/swipe" />

                <LinearLayout
                    android:layout_width="212dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20sp"
                        android:layout_weight="1"
                        android:text="@string/swiping_right_text"
                        android:textColor="#2B2828"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:text="@string/swiping_left_text"
                        android:textColor="#2B2828"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>