<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/row_background"
        android:layout_margin="15dp"
        android:padding="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_settings"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center">

            </TextView>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="left"
                android:text="@string/take_tags_hard"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:switchPadding="115dp">

            </androidx.appcompat.widget.SwitchCompat>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="left"
                android:text="@string/max_history_size"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:switchPadding="40dp">

            </androidx.appcompat.widget.SwitchCompat>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save_algorithm_settings"
                android:layout_gravity="center"
                android:backgroundTint="@color/design_default_color_primary_dark">

            </Button>

        </TableRow>

    </TableLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>